--- a/src/components/BottomPanel/styles.module.scss
+++ b/src/components/BottomPanel/styles.module.scss
@@ -3,6 +3,13 @@
   justify-content: space-between;
   align-items: center;
   margin-top: 20px;
+  flex-wrap: wrap;
+  gap: 10px;
+
+  @media screen and (max-width: 600px) {
+    justify-content: center;
+  }
+
 
   .buttonsWrapper {
     display: flex;
